Fix bug with focus on iOS.

--- a/src/assets/scss/menu.scss
+++ b/src/assets/scss/menu.scss
@@ -36,7 +36,6 @@
         		font-size: 1rem;
         		padding: 2px 6px;
         		outline: none;
-        		user-select: none;
         		&::selection {
           			background-color: $primary-green;
           			color: $primary-white;
